log
Fri 09 Sep 2022 12:22:35 PM UTC: 
 tests:  0|6
total_score: 0/70
e4a8024
Fri 09 Sep 2022 12:54:44 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:6: error: statement with no effect [-Werror=unused-value]
   57 |   map->buckets
      |   ~~~^~~~~~~~~
hashmap.c:57:15: error: expected ‘;’ before ‘return’
   57 |   map->buckets
      |               ^
      |               ;
   58 | 
   59 |   return map;
      |   ~~~~~~       
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1996156
Fri 09 Sep 2022 12:56:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d8cf593
Fri 09 Sep 2022 12:58:39 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
37f6760
Fri 09 Sep 2022 12:59:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e0f9bc8
Fri 09 Sep 2022 01:14:12 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:10: error: ‘true’ undeclared (first use in this function)
   47 |   while (true){
      |          ^~~~
hashmap.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘enlarge’:
hashmap.c:61:1: error: expected identifier or ‘(’ before ‘}’ token
   61 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
19c9e4a
Fri 09 Sep 2022 01:14:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:61:1: error: expected identifier or ‘(’ before ‘}’ token
   61 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b53c86
Fri 09 Sep 2022 01:16:42 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
   67 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4ad39a
Mon 12 Sep 2022 12:46:55 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:8: error: expected identifier before ‘sizeof’
   71 |   map->sizeof = 0;
      |        ^~~~~~
Compilation failed
c48adf9
Mon 12 Sep 2022 12:47:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:62:2: error: expected ‘;’ before ‘void’
   62 | s
      |  ^
      |  ;
   63 | void enlarge(HashMap * map) {
      | ~~~~
hashmap.c: In function ‘enlarge’:
hashmap.c:71:8: error: expected identifier before ‘sizeof’
   71 |   map->sizeof = 0;
      |        ^~~~~~
Compilation failed
54f20b0
Mon 12 Sep 2022 12:48:08 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:62:2: error: expected ‘;’ before ‘void’
   62 | s
      |  ^
      |  ;
   63 | void enlarge(HashMap * map) {
      | ~~~~
Compilation failed
923c9bb
Mon 12 Sep 2022 12:59:28 AM UTC: 
 hashmap.c | 27 ++++++++++++++-------------
 1 file changed, 14 insertions(+), 13 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:6: error: ‘porcentaje’ undeclared (first use in this function); did you mean ‘porrcentaje’?
   48 |   if(porcentaje > 0.7){
      |      ^~~~~~~~~~
      |      porrcentaje
hashmap.c:48:6: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:46:9: error: unused variable ‘porrcentaje’ [-Werror=unused-variable]
   46 |   float porrcentaje = map->size/map->capacity;
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
37e0271
Mon 12 Sep 2022 12:59:56 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
819623b
Mon 12 Sep 2022 01:06:00 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
0bbb086
Mon 12 Sep 2022 01:11:45 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|1
total_score: 60/70
80acab6
Mon 12 Sep 2022 01:14:34 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:136:8: error: ‘i’ undeclared (first use in this function)
  136 |   for (i = map->current + 1 ;i < map->capacity; i++){
      |        ^
hashmap.c:136:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3288384
Mon 12 Sep 2022 01:14:52 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|1
total_score: 60/70
f537ad5
